<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_city_detail"
            android:textSize="18sp"
            android:layout_marginTop="10sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/holo_blue_dark"/>
        <EditText
            android:id="@+id/et_enter_city_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/app_enter_city_name"
            android:inputType="text"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:layout_margin="10dp"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/et_enter_city_population"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/app_enter_population"
            android:inputType="number"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:layout_margin="10dp"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/et_enter_city_state"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/app_enter_state"
            android:inputType="text"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:layout_margin="10dp"
            android:imeOptions="actionDone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/app_cancel"
            android:textColor="@android:color/holo_blue_dark"
            android:textAllCaps="false"/>
            <Button
                android:id="@+id/btn_add_data"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/app_add"
                android:textColor="@android:color/holo_blue_dark"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>